bk_ida/gccida/c3/emit_pop_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_pop_insn/src/reg-stack.c:1379:56: error: must use 'enum' tag to refer to type 'emit_where'
rtx  emit_pop_insn( rtx insn, stack regstack, rtx reg, emit_where where) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_pop_insn/src/reg-stack.c:1398:32: error: must use 'enum' tag to refer to type 'mode_class'
if ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)reg >> 14) & 0x3FC)) - 5) > 1 ) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_pop_insn/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_pop_insn/src/reg-stack.c:1398:56: error: use of undeclared identifier 'mode_class_0'
if ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)reg >> 14) & 0x3FC)) - 5) > 1 ) 
                                                       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_pop_insn/src/obj/reg-stack.o] Error 1
